package cloudapps.mastermind;

public class MasterMind {

}
